--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<button class="btn btn-warning">Start</button>
-<app-posts></app-posts>
+<div class="container p-3">
+  <app-posts></app-posts>
+</div>
