--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,6 +1,6 @@
-<ul class="group-list">
+<ul class="list-group">
   <li 
   *ngFor="let post of posts"
-  class="group-list-item"
+  class="list-group-item"
   > {{ post.title }}</li>
 </ul>
