--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,4 +1,10 @@
-<ul class="list-group">
+<input type="text"
+placeholder="Title"
+(keyup.enter)="createPost(input)"
+#input
+class="form-control">
+
+<ul class="list-group m-3">
   <li 
   *ngFor="let post of posts"
   class="list-group-item"
